--- a/templates/home.html
+++ b/templates/home.html
@@ -7,4 +7,7 @@
 
 {% block main %}
 <title>Hello.</title>
+    <h1>Welcome to Chainlock.</h1>
+    <h3>Keep your Bitcoin in your heart for a while.</h3>
+    <iframe width="560" height="315" src="//www.youtube.com/embed/1KjRLq4uF4A" frameborder="0" allowfullscreen></iframe>
 {% endblock %}
