--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,9 @@
 
 {% block main %}
 <title>Hello.</title>
-    <h1>Welcome to Chainlock.</h1>
-    <h3>Keep your Bitcoin in your heart for a while.</h3>
+    <div class="col-sm-10 col-sm-offset-1" style="text-align: center; margin-top: 15%;">
+    <h1 >Welcome to Chainlock.</h1>
+    <h3 style="margin-bottom:5%">Keep Bitcoin in your heart for a while.</h3>
     <iframe width="560" height="315" src="//www.youtube.com/embed/1KjRLq4uF4A" frameborder="0" allowfullscreen></iframe>
+    </div>
 {% endblock %}
